--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@drawable/bg_half"
+    android:orientation="vertical"
     tools:context=".ui.main.ui.changepassword.ChangePasswordActivity">
 
     <include
@@ -24,69 +24,66 @@
 
 
             <ImageView
-                android:layout_width="@dimen/_120sdp"
-                android:layout_height="@dimen/_120sdp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_20sdp"
                 android:contentDescription="@string/image"
-                android:src="@drawable/logo" />
+                android:src="@drawable/lock" />
 
             <TextView
                 style="@style/WrapTextView"
                 android:layout_marginTop="@dimen/_20sdp"
-                android:text="Old Password"
+                android:text="@string/old_password"
                 android:textSize="@dimen/_14sdp" />
 
             <EditText
                 style="@style/MatchEditText"
-                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:background="@drawable/bg_edit_text"
-                android:hint="@string/enter_name"
+                android:hint="@string/old_password"
                 android:imeOptions="actionNext"
                 android:inputType="textPassword"
                 android:paddingStart="@dimen/_10sdp"
-                android:paddingEnd="@dimen/_10sdp"
-                android:text="Rony" />
+                android:paddingEnd="@dimen/_10sdp" />
 
             <TextView
                 style="@style/WrapTextView"
                 android:layout_marginTop="@dimen/_20sdp"
-                android:text="New Password"
+                android:text="@string/new_password"
                 android:textSize="@dimen/_14sdp" />
 
             <EditText
                 style="@style/MatchEditText"
-                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:background="@drawable/bg_edit_text"
-                android:hint="@string/enter_name"
+                android:hint="@string/new_password"
                 android:imeOptions="actionNext"
                 android:inputType="textPassword"
                 android:paddingStart="@dimen/_10sdp"
-                android:paddingEnd="@dimen/_10sdp"
-                android:text="Rony" />
+                android:paddingEnd="@dimen/_10sdp" />
 
             <TextView
                 style="@style/WrapTextView"
                 android:layout_marginTop="@dimen/_20sdp"
-                android:text="Confirm New Password"
+                android:text="@string/confirm_new_password"
                 android:textSize="@dimen/_14sdp" />
 
             <EditText
                 style="@style/MatchEditText"
-                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:background="@drawable/bg_edit_text"
-                android:hint="@string/enter_name"
-                android:imeOptions="actionNext"
+                android:hint="@string/confirm_new_password"
+                android:imeOptions="actionDone"
                 android:inputType="textPassword"
                 android:paddingStart="@dimen/_10sdp"
-                android:paddingEnd="@dimen/_10sdp"
-                android:text="Rony" />
+                android:paddingEnd="@dimen/_10sdp" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnSave"
                 style="@style/ButtonMatch"
-                android:layout_marginTop="@dimen/_60sdp"
                 android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_70sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:background="@drawable/bg_sky_blue_10dp"
                 android:contentDescription="@string/image"
