--- a/app/src/main/res/layout/activity_weight_chart.xml
+++ b/app/src/main/res/layout/activity_weight_chart.xml
@@ -48,9 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/llTopBtn"
-        android:layout_marginStart="@dimen/_20sdp"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_20sdp" />
+        android:layout_marginTop="@dimen/_10sdp" />
 
 
 
