--- a/app/src/main/res/layout/activity_your_pet_detail.xml
+++ b/app/src/main/res/layout/activity_your_pet_detail.xml
@@ -52,7 +52,7 @@
             android:hint="@string/name"
             android:textColorHint="@color/black"
             android:paddingStart="@dimen/_10sdp"
-            android:imeOptions="actionNext"
+            android:imeOptions="actionDone"
             android:inputType="textEmailAddress"
             android:paddingEnd="@dimen/_10sdp"/>
 
@@ -180,7 +180,7 @@
             android:textColorHint="@color/black"
             android:paddingStart="@dimen/_10sdp"
             android:imeOptions="actionDone"
-            android:inputType="textEmailAddress"
+            android:inputType="textMultiLine"
             android:paddingEnd="@dimen/_10sdp"/>
 
         <androidx.appcompat.widget.AppCompatButton
