--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -75,6 +75,7 @@
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="@dimen/_10sdp"
                         android:text="John Marker"
+                        android:textColor="@color/grey"
                         android:textSize="@dimen/_14sdp" />
 
                     <TextView
@@ -85,7 +86,8 @@
                         android:layout_below="@id/name"
                         android:layout_centerHorizontal="true"
                         android:text="johnmarker@gmail.com"
-                        android:textSize="@dimen/_12sdp" />
+                        android:textSize="@dimen/_12sdp"
+                        android:textColor="@color/grey"/>
 
                 </RelativeLayout>
 
