--- a/app/src/main/res/drawable/bg_radio_box.xml
+++ b/app/src/main/res/drawable/bg_radio_box.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:drawable="@drawable/dot2"
+    <item android:drawable="@drawable/ic_dot_unselect"
         android:state_checked="false"/>
-    <item android:drawable="@drawable/dot1"
+    <item android:drawable="@drawable/ic_dot_select"
         android:state_checked="true"/>
-    <item android:drawable="@drawable/dot2"/>
+    <item android:drawable="@drawable/ic_dot_unselect"/>
 </selector>
