--- a/app/src/main/res/drawable/bottom_nav_corner_5dp.xml
+++ b/app/src/main/res/drawable/bottom_nav_corner_5dp.xml
@@ -3,10 +3,11 @@
 
     android:shape="rectangle">
 
-    <solid android:color="@color/white"/>
+    <solid android:color="@color/white" />
 
-    <corners android:topLeftRadius="@dimen/_10sdp"
-        android:topRightRadius="@dimen/_10sdp"/>
+    <corners
+        android:topLeftRadius="@dimen/_10sdp"
+        android:topRightRadius="@dimen/_10sdp" />
 
 
 </shape>
