--- a/app/src/main/res/layout/activity_add_remainder.xml
+++ b/app/src/main/res/layout/activity_add_remainder.xml
@@ -31,7 +31,8 @@
                 android:imeOptions="actionDone"
                 android:inputType="textPersonName"
                 android:paddingStart="@dimen/_10sdp"
-                android:paddingEnd="@dimen/_10sdp" />
+                android:paddingEnd="@dimen/_10sdp"
+                android:textColorHint="@color/black" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -56,7 +57,8 @@
                     android:inputType="date"
                     android:longClickable="false"
                     android:paddingStart="@dimen/_10sdp"
-                    android:paddingEnd="@dimen/_10sdp" />
+                    android:paddingEnd="@dimen/_10sdp"
+                    android:textColorHint="@color/black" />
 
                 <EditText
                     android:id="@+id/edtTime"
@@ -74,7 +76,8 @@
                     android:inputType="text"
                     android:longClickable="false"
                     android:paddingStart="@dimen/_10sdp"
-                    android:paddingEnd="@dimen/_10sdp" />
+                    android:paddingEnd="@dimen/_10sdp"
+                    android:textColorHint="@color/black" />
             </LinearLayout>
 
             <TextView
