--- a/app/src/main/res/layout/activity_category_detail.xml
+++ b/app/src/main/res/layout/activity_category_detail.xml
@@ -5,9 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:fillViewport="true"
     tools:context=".ui.main.ui.category_detail.CategoryDetailActivity">
 
     <LinearLayout
+        android:background="@drawable/bg_half"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
