--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -70,7 +70,7 @@
                 android:hint="@string/enter_email"
                 android:paddingStart="@dimen/_10sdp"
                 android:text="@{forgotVM.email}"
-                android:imeOptions="actionNext"
+                android:imeOptions="actionDone"
                 android:inputType="textEmailAddress"
                 android:paddingEnd="@dimen/_10sdp"/>
 
