--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,159 +1,149 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout  xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="loginVM"
             type="com.puppypedia.ui.auth.login.LoginVM" />
     </data>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
-        tools:context=".ui.auth.login.LoginActivity">
+        android:background="@drawable/bg"
+        android:orientation="vertical"
+        android:paddingStart="@dimen/_20sdp"
+        android:paddingEnd="@dimen/_20sdp">
 
-        <androidx.core.widget.NestedScrollView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fillViewport="true"  >
+            android:layout_above="@id/llSignUp"
+            android:layout_alignParentTop="true"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <ImageView
+                android:layout_width="@dimen/_100sdp"
+                android:layout_height="@dimen/_100sdp"
+                android:layout_gravity="center"
+                android:contentDescription="@string/image"
+                android:src="@drawable/logo" />
+
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/bg"
-                android:paddingStart="@dimen/_20sdp"
-                android:paddingEnd="@dimen/_20sdp"
-                android:orientation="vertical">
+                android:layout_marginTop="@dimen/_25sdp"
+                android:fontFamily="@font/courgette_regular"
+                android:text="@string/welcome_back"
+                android:textColor="@color/theme_Color"
+                android:textSize="@dimen/_20sdp" />
 
-                <ImageView
-                    android:layout_width="@dimen/_100sdp"
-                    android:layout_height="@dimen/_100sdp"
-                    android:src="@drawable/logo"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/_80sdp"
-                    android:contentDescription="@string/image" />
+            <TextView
+                style="@style/WrapTextView"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:fontFamily="@font/opensans_semibold"
+                android:text="@string/please_sign_into_your_account" />
+
+            <TextView
+                style="@style/WrapTextView"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:text="@string/email"
+                android:textSize="@dimen/_14sdp" />
+
+            <EditText
+                style="@style/MatchEditText"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:background="@drawable/bg_edit_text"
+                android:hint="@string/enter_email"
+                android:imeOptions="actionNext"
+                android:inputType="textEmailAddress"
+                android:paddingStart="@dimen/_10sdp"
+                android:paddingEnd="@dimen/_10sdp"
+                android:text="@{loginVM.email}" />
+
+            <TextView
+                style="@style/WrapTextView"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:text="@string/password"
+                android:textSize="@dimen/_14sdp" />
+
+            <EditText
+                style="@style/MatchEditText"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:background="@drawable/bg_edit_text"
+                android:hint="@string/enter_password"
+                android:imeOptions="actionDone"
+                android:inputType="textPassword"
+                android:paddingStart="@dimen/_10sdp"
+                android:paddingEnd="@dimen/_10sdp"
+                android:text="@{loginVM.password}" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:orientation="horizontal">
+
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/welcome_back"
-                    android:layout_marginTop="@dimen/_20sdp"
-                    android:fontFamily="@font/courgette_regular"
-                    android:textSize="@dimen/_20sdp"
-                    android:textColor="@color/theme_Color"
-                    />
-
-                <TextView
-                   style="@style/WrapTextView"
-                    android:text="@string/please_sign_into_your_account"
-                    android:layout_marginTop="@dimen/_5sdp"
-                    android:fontFamily="@font/opensans_semibold"
-                    />
-
-                <TextView
-                   style="@style/WrapTextView"
-                    android:text="@string/email"
-                    android:layout_marginTop="@dimen/_20sdp"
-                    android:textSize="@dimen/_14sdp"
-                    />
-
-                <EditText
-                    style="@style/MatchEditText"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:background="@drawable/bg_edit_text"
-                    android:hint="@string/enter_email"
-                    android:imeOptions="actionNext"
-                    android:inputType="textEmailAddress"
-                    android:paddingStart="@dimen/_10sdp"
-                    android:paddingEnd="@dimen/_10sdp"
-                    android:text="@{loginVM.email}" />
-
-                <TextView
+                    android:id="@+id/forgot_passs"
                     style="@style/WrapTextView"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:text="@string/password"
-                    android:textSize="@dimen/_14sdp" />
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerInParent="true"
+                    android:onClick="@{(view)-> loginVM.onClick(view,`btnForgot`)}"
+                    android:text="@string/forgot_password"
+                    android:textColor="@color/grey"
+                    android:textSize="@dimen/_10sdp" />
 
-                <EditText
-                    style="@style/MatchEditText"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:background="@drawable/bg_edit_text"
-                    android:hint="@string/enter_password"
-                    android:imeOptions="actionNext"
-                    android:text="@{loginVM.password}"
-                    android:inputType="textPassword"
-                    android:paddingStart="@dimen/_10sdp"
-                    android:paddingEnd="@dimen/_10sdp" />
+            </RelativeLayout>
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/_20sdp"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:orientation="horizontal">
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/login"
+                style="@style/ButtonMatch"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:background="@drawable/bg_sky_blue_10dp"
+                android:contentDescription="@string/image"
+                android:onClick="@{(view)-> loginVM.onClick(view,`btnSignIn`)}"
+                android:text="@string/sign_in" />
 
+        </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/forgot_passs"
-                        style="@style/WrapTextView"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerInParent="true"
-                        android:onClick="@{(view)-> loginVM.onClick(view,`btnForgot`)}"
-                        android:text="@string/forgot_password"
-                        android:textColor="@color/grey"
-                        android:textSize="@dimen/_10sdp" />
+        <LinearLayout
+            android:id="@+id/llSignUp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:layout_marginBottom="@dimen/_10sdp">
 
-                </RelativeLayout>
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/login"
-                    style="@style/ButtonMatch"
-                    android:layout_marginTop="@dimen/_20sdp"
-                    android:background="@drawable/bg_sky_blue_10dp"
-                    android:contentDescription="@string/image"
-                    android:onClick="@{(view)-> loginVM.onClick(view,`btnSignIn`)}"
-                    android:text="@string/sign_in" />
+            <TextView
+                style="@style/WrapTextView"
+                android:layout_gravity="center"
+                android:layout_marginBottom="@dimen/dp5"
+                android:text="@string/don_t_have_an_account"
+                android:textSize="@dimen/_10sdp" />
 
-                <LinearLayout
-                    android:id="@+id/llSignUp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/_20sdp"
-                  >
+            <TextView
+                style="@style/WrapTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="@dimen/dp5"
+                android:layout_marginBottom="@dimen/dp5"
+                android:onClick="@{(view)->loginVM.onClick(view,`SignUp`)}"
+                android:text="@string/sign_up"
+                android:textColor="@color/theme_Color"
+                android:textSize="@dimen/_10sdp" />
 
-                    <TextView
-                        style="@style/WrapTextView"
-                        android:textSize="@dimen/_10sdp"
-                        android:layout_gravity="center"
-                        android:layout_marginBottom="@dimen/dp5"
-                        android:text="@string/don_t_have_an_account"
-                       />
-
-                    <TextView
-                        style="@style/WrapTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginStart="@dimen/dp5"
-                        android:layout_marginBottom="@dimen/dp5"
-                        android:text="@string/sign_up"
-                        android:onClick="@{(view)->loginVM.onClick(view,`SignUp`)}"
-                        android:textSize="@dimen/_10sdp"
-                        android:textColor="@color/theme_Color" />
-
-                </LinearLayout>
+        </LinearLayout>
 
 
-
-            </LinearLayout>
-
-
-        </androidx.core.widget.NestedScrollView>
-
-
-    </LinearLayout>
+    </RelativeLayout>
 
 </layout>
 
