--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.fragments.SearchFragment">
 
     <androidx.appcompat.widget.Toolbar
@@ -21,7 +21,6 @@
             android:layout_height="match_parent">
 
 
-
             <TextView
                 android:id="@+id/signin_text"
                 style="@style/WrapTextView"
@@ -30,32 +29,52 @@
                 android:textSize="@dimen/_14sdp" />
 
 
-
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="@dimen/_10sdp"
-        android:layout_marginTop="@dimen/_10sdp"
         android:layout_marginStart="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_20sdp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:cardCornerRadius="@dimen/_10sdp">
 
 
-        <EditText
-            style="@style/MatchEditText"
-            android:background="@drawable/bg_edit_text_white"
-            android:hint="@string/search"
-            android:imeOptions="actionNext"
-            android:inputType="textEmailAddress"
-            android:paddingStart="@dimen/_10sdp"
-            android:drawableTint="@color/black"
-            android:drawableStart="@drawable/serach"
-            android:drawablePadding="@dimen/_5sdp"
-            android:paddingEnd="@dimen/_10sdp"
-            android:text="Training" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/edtSearch"
+                style="@style/MatchEditText"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:background="@drawable/bg_edit_text_white"
+                android:drawableStart="@drawable/serach"
+                android:drawablePadding="@dimen/_5sdp"
+                android:drawableTint="@color/lightGrayA3A3A3"
+                android:hint="@string/search"
+                android:imeOptions="actionDone"
+                android:importantForAutofill="no"
+                android:inputType="textEmailAddress"
+                android:paddingStart="@dimen/_10sdp"
+                android:paddingEnd="@dimen/_10sdp" />
+
+            <ImageView
+                android:id="@+id/ivCross"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="@dimen/_5sdp"
+                android:contentDescription="@string/image"
+                android:padding="@dimen/_5sdp"
+                android:src="@drawable/crros"
+                android:visibility="gone" />
+
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
