--- a/app/src/main/res/layout/item_spinner.xml
+++ b/app/src/main/res/layout/item_spinner.xml
@@ -6,13 +6,14 @@
 
     <TextView
         android:id="@+id/tvSpinner"
-        style="@style/WrapTextView"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_35sdp"
+        android:fontFamily="@font/opensans_regular"
         android:gravity="center_vertical"
         android:paddingStart="@dimen/_5sdp"
         android:paddingEnd="@dimen/_5sdp"
         android:text="@string/about_pet"
+        android:textColor="@color/black"
         android:textSize="@dimen/_12sdp" />
 
 </LinearLayout>
