--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -69,5 +69,25 @@
         <item name="android:textSize">@dimen/_12sdp</item>
     </style>
 
+    <style name="CalendarTheme" parent="Theme.PuppyPedia">
+        <item name="android:textColorPrimary">@color/black</item>
+        <item name="colorControlActivated">@color/theme_Color</item>
+        <item name="android:fontFamily">@font/courgette_regular</item>
+    </style>
 
+    <style name="CalendarDayColor" parent="TextAppearance.MaterialComponents.Caption">
+        <item name="android:textColor">@color/black</item>
+
+    </style>
+
+    <style name="CalendarWeekColor" parent="TextAppearance.MaterialComponents.Caption">
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="AppTheme.Picker" parent="Theme.PuppyPedia">
+        <item name="android:textColorPrimary">@color/black</item>
+        <item name="android:textSize">@dimen/_15sdp</item>
+        <item name="android:fontFamily">@font/opensans_regular</item>
+<!--        <item name="colorControlNormal">@color/theme_Color</item>-->
+    </style>
 </resources>
